--- a/frontend/public/App.css
+++ b/frontend/public/App.css
@@ -67,3 +67,9 @@ button:hover {
   padding: 3px 7px;
   font-size: 17px;
 }
+
+#input form {
+  display: none;
+  text-align: right;
+  max-width: 400px;
+}
